// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accepts invalid input 1`] = `
<ForwardRef(forwardRef)
  itemGutter={true}
>
  <ForwardRef(forwardRef)
    aria-label="value"
    autoCapitalize="off"
    autoComplete="off"
    autoCorrect="off"
    className="DurationField-value"
    color="regular"
    disabled={false}
    name="duration-value"
    onChange={[Function]}
    spellCheck={false}
    textAlignCenter={true}
    value="this is so invalid"
  />
  <withPropsOnChange(withUIContext(WithKeyboardFocus))
    aria-label="unit"
    classes={
      Object {
        "select": "DurationField-select",
      }
    }
    disabled={false}
    name="duration-unit"
    onChange={[Function]}
    value="1"
  >
    <Localized
      id="framework-durationField-unit"
      vars={
        Object {
          "unit": "second",
          "value": NaN,
        }
      }
    >
      <Option
        value="1"
      >
        second
      </Option>
    </Localized>
    <Localized
      id="framework-durationField-unit"
      vars={
        Object {
          "unit": "minute",
          "value": NaN,
        }
      }
    >
      <Option
        value="60"
      >
        minute
      </Option>
    </Localized>
    <Localized
      id="framework-durationField-unit"
      vars={
        Object {
          "unit": "hour",
          "value": NaN,
        }
      }
    >
      <Option
        value="3600"
      >
        hour
      </Option>
    </Localized>
  </withPropsOnChange(withUIContext(WithKeyboardFocus))>
</ForwardRef(forwardRef)>
`;

exports[`renders correctly with default units 1`] = `
<ForwardRef(forwardRef)
  itemGutter={true}
>
  <ForwardRef(forwardRef)
    aria-label="value"
    autoCapitalize="off"
    autoComplete="off"
    autoCorrect="off"
    className="DurationField-value"
    color="regular"
    disabled={false}
    name="duration-value"
    onChange={[Function]}
    spellCheck={false}
    textAlignCenter={true}
    value=""
  />
  <withPropsOnChange(withUIContext(WithKeyboardFocus))
    aria-label="unit"
    classes={
      Object {
        "select": "DurationField-select",
      }
    }
    disabled={false}
    name="duration-unit"
    onChange={[Function]}
    value="3600"
  >
    <Localized
      id="framework-durationField-unit"
      vars={
        Object {
          "unit": "hour",
          "value": NaN,
        }
      }
    >
      <Option
        value="3600"
      >
        hour
      </Option>
    </Localized>
    <Localized
      id="framework-durationField-unit"
      vars={
        Object {
          "unit": "day",
          "value": NaN,
        }
      }
    >
      <Option
        value="86400"
      >
        day
      </Option>
    </Localized>
    <Localized
      id="framework-durationField-unit"
      vars={
        Object {
          "unit": "week",
          "value": NaN,
        }
      }
    >
      <Option
        value="604800"
      >
        week
      </Option>
    </Localized>
  </withPropsOnChange(withUIContext(WithKeyboardFocus))>
</ForwardRef(forwardRef)>
`;

exports[`renders correctly with specified units 1`] = `
<ForwardRef(forwardRef)
  itemGutter={true}
>
  <ForwardRef(forwardRef)
    aria-label="value"
    autoCapitalize="off"
    autoComplete="off"
    autoCorrect="off"
    className="DurationField-value"
    color="regular"
    disabled={false}
    name="duration-value"
    onChange={[Function]}
    spellCheck={false}
    textAlignCenter={true}
    value=""
  />
  <withPropsOnChange(withUIContext(WithKeyboardFocus))
    aria-label="unit"
    classes={
      Object {
        "select": "DurationField-select",
      }
    }
    disabled={false}
    name="duration-unit"
    onChange={[Function]}
    value="1"
  >
    <Localized
      id="framework-durationField-unit"
      vars={
        Object {
          "unit": "second",
          "value": NaN,
        }
      }
    >
      <Option
        value="1"
      >
        second
      </Option>
    </Localized>
    <Localized
      id="framework-durationField-unit"
      vars={
        Object {
          "unit": "hour",
          "value": NaN,
        }
      }
    >
      <Option
        value="3600"
      >
        hour
      </Option>
    </Localized>
  </withPropsOnChange(withUIContext(WithKeyboardFocus))>
</ForwardRef(forwardRef)>
`;

exports[`use best matching unit 1`] = `
<ForwardRef(forwardRef)
  itemGutter={true}
>
  <ForwardRef(forwardRef)
    aria-label="value"
    autoCapitalize="off"
    autoComplete="off"
    autoCorrect="off"
    className="DurationField-value"
    color="regular"
    disabled={false}
    name="duration-value"
    onChange={[Function]}
    spellCheck={false}
    textAlignCenter={true}
    value="1"
  />
  <withPropsOnChange(withUIContext(WithKeyboardFocus))
    aria-label="unit"
    classes={
      Object {
        "select": "DurationField-select",
      }
    }
    disabled={false}
    name="duration-unit"
    onChange={[Function]}
    value="3600"
  >
    <Localized
      id="framework-durationField-unit"
      vars={
        Object {
          "unit": "second",
          "value": 1,
        }
      }
    >
      <Option
        value="1"
      >
        second
      </Option>
    </Localized>
    <Localized
      id="framework-durationField-unit"
      vars={
        Object {
          "unit": "minute",
          "value": 1,
        }
      }
    >
      <Option
        value="60"
      >
        minute
      </Option>
    </Localized>
    <Localized
      id="framework-durationField-unit"
      vars={
        Object {
          "unit": "hour",
          "value": 1,
        }
      }
    >
      <Option
        value="3600"
      >
        hour
      </Option>
    </Localized>
  </withPropsOnChange(withUIContext(WithKeyboardFocus))>
</ForwardRef(forwardRef)>
`;

exports[`use initial unit if 0 1`] = `
<ForwardRef(forwardRef)
  itemGutter={true}
>
  <ForwardRef(forwardRef)
    aria-label="value"
    autoCapitalize="off"
    autoComplete="off"
    autoCorrect="off"
    className="DurationField-value"
    color="regular"
    disabled={false}
    name="duration-value"
    onChange={[Function]}
    spellCheck={false}
    textAlignCenter={true}
    value="0"
  />
  <withPropsOnChange(withUIContext(WithKeyboardFocus))
    aria-label="unit"
    classes={
      Object {
        "select": "DurationField-select",
      }
    }
    disabled={false}
    name="duration-unit"
    onChange={[Function]}
    value="1"
  >
    <Localized
      id="framework-durationField-unit"
      vars={
        Object {
          "unit": "second",
          "value": 0,
        }
      }
    >
      <Option
        value="1"
      >
        second
      </Option>
    </Localized>
    <Localized
      id="framework-durationField-unit"
      vars={
        Object {
          "unit": "minute",
          "value": 0,
        }
      }
    >
      <Option
        value="60"
      >
        minute
      </Option>
    </Localized>
    <Localized
      id="framework-durationField-unit"
      vars={
        Object {
          "unit": "hour",
          "value": 0,
        }
      }
    >
      <Option
        value="3600"
      >
        hour
      </Option>
    </Localized>
  </withPropsOnChange(withUIContext(WithKeyboardFocus))>
</ForwardRef(forwardRef)>
`;
